--- a/manager/templates/navbar.html
+++ b/manager/templates/navbar.html
@@ -8,7 +8,7 @@
                     HoodWatch</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <a class="dropdown-item"  href="{%  url 'showprofile' user.id %}" type="button">View profile</a>
-                        <button class="dropdown-item" href="{% url 'home' %}" type="button">View hoods</button>
+                        <button class="dropdown-item" href="{% url 'hood' %}" type="button">View hoods</button>
                     </div>
                 </div>
             {%endif%}
