--- a/manager/templates/registration/login.html
+++ b/manager/templates/registration/login.html
@@ -9,20 +9,20 @@
             <p class="small">Password or Username is incorrect</p>
             {% endif %}
             <div class="section">
-                <h1>Instagram</h1>
+                <h1>Hood!</h1>
                 <div class="form-section">
-                    <form action="/login/" method="POST">
+                    <form action="/accounts/login/" method="POST">
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary btn-sm" value="Sign In">
+                            <input type="submit" class="btn btn-primary btn-lg" value="Sign In">
                         </div>
                         <input type="hidden" name="next" value="{{next}}">
                     </form>
                 </div>
             </div>
             <div class="section">
-                <p>Don't have an account? <a href="/signup/">Sign-Up</a></p>
+                <p>Don't have an account? <a href="/accounts/register">Sign-Up</a></p>
             </div>
         </div>
     </div>
