--- a/manager/templates/navbar.html
+++ b/manager/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark" id="navMain">
-    <a class="" href="/"><i class="fa fa-home"style="font-size:30px;color:red"></i></a>
+    <a class="" href="/"><i class="fa fa-home"style="font-size:30px;color:green"></i></a>
     <div class="container">
         <div class="collapse navbar-collapse" id="navbarResponsive">
             {% if user.is_authenticated %}
@@ -17,7 +17,7 @@
                     <ul class="navbar-nav " style="list-style: none">
                         <li class="nav-item">
                             {% if user.is_authenticated %}
-                                <a class="nav-link open-nav" href="{% url 'showprofile' user.id %}"><i class="fa fa-user" style="font-size:30px;color:red"><small>{{ user }}</small></i></a>
+                                <a class="nav-link open-nav" href="{% url 'showprofile' user.id %}"><i class="fa fa-user" style="font-size:30px;color:green"><small>{{ user }}</small></i></a>
                                 </li>
                                 </ul>
                             {%endif%}
@@ -30,7 +30,7 @@
                         <div class="row">
                             <div class="col-md-12 nav-search">
                                 <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search' %}">
-                                    <input class="form-control my-2 my-sm-0 search-input" name="hoods" type="search" placeholder="Search hoods" aria-label="Search">
+                                    <input class="form-control my-2 my-sm-0 search-input" name="hoods" type="search" placeholder="Search Estates" aria-label="Search">
                                 </form>
                             </div>
                         </div>
