--- a/manager/templates/search.html
+++ b/manager/templates/search.html
@@ -23,7 +23,7 @@
 		{%endfor%}
 		{% else %}
 		<div class="col-md-6">
-				<h4 class="text-center">No neighbourhood with the name <strong>{{message}}</strong> exists! You can however create it <a href="{% url 'createHood' %}">here</a></h4>
+				<h4 class="text-center">No Estate with the name <strong>{{message}}</strong> exists! You can however create it <a href="{% url 'createHood' %}">here</a></h4>
 			</div>
 		{%endif%}
 
